Truncate bill title on sponsored votes; URI encode photo urls to fix % in filename issue

--- a/public/stylesheets/bills.css
+++ b/public/stylesheets/bills.css
@@ -115,14 +115,12 @@ background: #f3f7f7;
 
 
 .bill_status div{
-padding: 0px 0 5px;
-  }
+  padding: 0px 0 5px;
+}
 
 .bill_status div.top{
-padding: 5px 0 5px;
-  }
-  
-
+  padding: 5px 0 5px;
+}
 
 
 .sponsor_mug {
@@ -131,17 +129,10 @@ padding: 5px 0 5px;
 
 
 .sponsor_mugs{
-
 }
-
-
 
 .sponsor_mugs span{
-
 }
-
-
-
 
 .sponsor_mugs a{
 padding: 1px !important;
@@ -162,9 +153,7 @@ background: -moz-linear-gradient(top,  #fff,  #eee); /* for firefox 3.6+ */
 
 
 .sponsor_mugs img{
-border: 1px solid #fff;
- height: 25px;
-width: 22px;
+  border: 1px solid #fff;
 }
 
 
